--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup stc",
     "test": "vitest"
-
   },
   "keywords": [],
   "author": "",
@@ -25,6 +24,9 @@
     "@types/node": "^22.5.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.20",
     "zod": "^3.23.8"
   }
 }
