--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start": "tsx src/server.ts",
     "dev": "tsx watch src/server.ts",
     "build": "tsup stc",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@vitest/coverage-v8": "^2.0.5",
     "tsup": "^8.2.4",
     "tsx": "^4.18.0",
     "typescript": "^5.5.4",
